--- a/CSS y WebResponsive/paisajes.html
+++ b/CSS y WebResponsive/paisajes.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Comenzando con la fotografía</title>
+	<title>Paisajes</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="CSS/basico.css">
-	<link rel="stylesheet" type="text/css" href="CSS/index.css">
+	<link rel="stylesheet" type="text/css" href="CSS/galeria.css">
 </head>
 <body>
 	<div id="contenido">
@@ -14,23 +14,30 @@
 			<h1>Comenzando con la fotografía</h1>
 			<nav>
 				<ul>
-					<li><a href="#" class="active">Inicio</a></li>
-					<li><a href="paisajes.html">Paisajes</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="#" class="active">Paisajes</a></li>
 					<li><a href="retratos.html">Retratos</a></li>
 				</ul>
 			</nav>
 		</header>
-		<section id="sec_Central">
-			<img src="imagenes/paisajes/paisaje6.jpg">
-		</section>
-		<section id="sec_Secundaria">
+		<section id="galeria">
 			<figure>
-				<a href="paisajes.html"><img id="img_paisajes" src="imagenes/paisajes/paisaje5.jpg"/></a>
-				<figcaption><a href="paisajes.html">Paisajes</a></figcaption>
+				<img src="imagenes/paisajes/paisaje1.jpg">
 			</figure>
 			<figure>
-				<a href="retratos.html"><img id="img_retratos" src="imagenes/retratos/retra6.jpg"/></a>
-				<figcaption><a href="retratos.html">Retratos</a></figcaption>
+				<img src="imagenes/paisajes/paisaje1.jpg">
+			</figure>
+			<figure>
+				<img src="imagenes/paisajes/paisaje1.jpg">
+			</figure>
+			<figure>
+				<img src="imagenes/paisajes/paisaje1.jpg">
+			</figure>
+			<figure>
+				<img src="imagenes/paisajes/paisaje1.jpg">
+			</figure>
+			<figure>
+				<img src="imagenes/paisajes/paisaje1.jpg">
 			</figure>
 		</section>
 		<footer>
